--- a/exercicios-js/html/index.html
+++ b/exercicios-js/html/index.html
@@ -5,18 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercicios HTML</title>
+
+    <style>
+        
+            #conteudo{
+                padding: 30px 30px;
+            }
+        
+    </style>
 </head>
 <body>
     <header>
         <h1>Exercicios HTML</h1>
     </header>
+
     <nav>
         <a href="exercicios/teste.html">00 - Teste </a> |
-        <a href="exercicios/temp.html">01 - Teste 1 </a>
+        <a href="exercicios/texto1.html">01 - Teste 1 </a> |
+        <a href="exercicios/texto2.html">03 - Teste 2 </a> |
+        <a href="exercicios/listas.html">04 - Lista  </a> |
+        <a href="exercicios/listaAninhada.html">05 - Lista Aninhada </a> |
     </nav>
     <section id="conteudo"></section>
     <footer>
-        <br>
         Curso de Web Moderno
     </footer>
 
