Update lista - style.css

--- a/exercicios-js/html/exercicios/listaAninhada.html
+++ b/exercicios-js/html/exercicios/listaAninhada.html
@@ -37,7 +37,7 @@
     
     
 
-<link rel="stylesheet" href="style/style.css">
+<link rel="stylesheet" href="style/listaAninhada.css">
 
 <script>
     document.querySelectorAll('[wm-folder]').forEach(folder => {
