--- a/exercicios-js/html/index.html
+++ b/exercicios-js/html/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="exercicios/style/listaAninhada.css">
     <title>Exercicios HTML</title>
 
     <style>
@@ -25,6 +26,8 @@
         <a href="exercicios/texto2.html">03 - Teste 2 </a> |
         <a href="exercicios/listas.html">04 - Lista  </a> |
         <a href="exercicios/listaAninhada.html">05 - Lista Aninhada </a> |
+        <a href="exercicios/links.html">06 - Links </a> |
+        <a href="exercicios/tabela.html">07 - Tabelas</a> |
     </nav>
     <section id="conteudo"></section>
     <footer>
@@ -48,5 +51,6 @@
             Footer
         </h3>
     </footer>
+    <script src="exercicios/js/script.js"></script>
 </body>
 </html>
