--- a/exercicios-js/html/exercicios/tabela.html
+++ b/exercicios-js/html/exercicios/tabela.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="style/style.css">
 <table>
     <caption>Produtos</caption>
 
@@ -9,4 +10,24 @@
             <th>Total</th>
         </tr>
     </thead>
+    <tbody>
+        <tr>
+            <td>Ipad</td>
+            <td>3900</td>
+            <td>300</td>
+            <td>20.000</td>            
+        </tr>
+        <tr>
+            <td>Samsung S10</td>
+            <td>5000</td>
+            <td>100</td>
+            <td>10.000</td>
+        </tr>
+        <tfoot>
+            <tr>
+                <td colspan="3">Total</td>
+                <td>5000</td>
+            </tr>
+        </tfoot>
+    </tbody>
 </table>
