--- a/exercicios-js/html/index.html
+++ b/exercicios-js/html/index.html
@@ -29,6 +29,7 @@
         <a href="exercicios/listaAninhada.html">05 - Lista Aninhada </a> |
         <a href="exercicios/links.html">06 - Links </a> |
         <a href="exercicios/tabela.html">07 - Tabelas</a> |
+        <a href="exercicios/form/form.html">08 - Formulário</a> |
     </nav>
     <section id="conteudo"></section>
     <footer>
