Update Form - Method: Post | Get

--- a/exercicios-js/html/exercicios/form/form.html
+++ b/exercicios-js/html/exercicios/form/form.html
@@ -1,7 +1,42 @@
+<link rel="stylesheet" href="../style/style.css">
+
+<div class="form">
+
 <h1>Formulário</h1>
 
-<form action="http://localhost:3003/usuarios" method="POST">
-    
+<form method="POST">    
+<input type="hidden" name="id" value="3">
 <input type="text" name="nome">
-<button>Incluir</button>
+<input type="password" name="senha">
+<textarea name="bio" cols="30" rows="10"></textarea>
+
+<div>
+    <input type="radio" name="tipo" value="admin">Admin
+    <input type="radio" name="tipo" value="user">Usuarios
+    <input type="radio" name="tipo" value="dev">Dev
+</div>
+
+<div>
+    <input type="checkbox" name="ativo"> Ativo
+</div>
+
+<select name="estado">
+    <option value="">Selecione</option>
+    <option value="am">Amazonas</option>
+    <option value="pa">Para</option>
+    <option value="ro">Rôndonia</option>
+</select>
+
+<select name="interesses" multiple size="7">
+    <option value="js">JavaScript</option>
+    <option value="java">Java</option>
+    <option value="php">PHP</option>
+    <option value="phyton">Phyton</option>
+    <option value="ruby">Roby</option>
+
+</select>
+
+<button formaction="http://localhost:3003/usuarios">Incluir</button>
+<button formaction="http://localhost:3003/usuarios/3">Alterar</button>
 </form>
+</div>
