Create Slide in JavaScript

--- a/exercicios-js/html/index.html
+++ b/exercicios-js/html/index.html
@@ -7,14 +7,7 @@
     <link rel="stylesheet" href="exercicios/style/listaAninhada.css">
     <link rel="stylesheet" href="exercicios/style/style.css">
     <title>Exercicios HTML</title>
-
-    <style>
-        
-            #conteudo{
-                padding: 30px 30px;
-            }
-        
-    </style>
+   
 </head>
 <body>
     <header>
@@ -30,6 +23,7 @@
         <a href="exercicios/links.html">06 - Links </a> |
         <a href="exercicios/tabela.html">07 - Tabelas</a> |
         <a href="exercicios/form/form.html">08 - Formulário</a> |
+        <a href="exercicios/imagens.html">09 - Imagens</a> |
     </nav>
     <section id="conteudo"></section>
     <footer>
@@ -54,5 +48,6 @@
         </h3>
     </footer>
     <script src="exercicios/js/script.js"></script>
+    <script src="exercicios/js/slider.js"></script>
 </body>
 </html>
