Update Slides and Create Movie Videos

--- a/exercicios-js/html/exercicios/imagens.html
+++ b/exercicios-js/html/exercicios/imagens.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="style/style.css">
-<div class="wm-slider">
+<div wm-slider>
 <p>
     <img src="http://files.cod3r.com.br/curso-web/imagem1.jpg" 
     alt="Muro da Cidade"
