--- a/exercicios-js/html/index.html
+++ b/exercicios-js/html/index.html
@@ -24,6 +24,7 @@
         <a href="exercicios/tabela.html">07 - Tabelas</a> |
         <a href="exercicios/form/form.html">08 - Formulário</a> |
         <a href="exercicios/imagens.html">09 - Imagens</a> |
+        <a href="exercicios/video.html">10 - Video</a> |
     </nav>
     <section id="conteudo"></section>
     <footer>
