Update Slider and finished Video + JavaScript

--- a/exercicios-js/html/exercicios/video.html
+++ b/exercicios-js/html/exercicios/video.html
@@ -11,6 +11,8 @@
 </div>
 
 <div>
-    <button wm-polay="meuVideo">Play</button>
+    <button wm-play="meuVideo">Play</button>
     <button wm-pause="meuVideo">Pause</button>
 </div>
+
+<script src="js/video.js"></script>
