--- a/exercicios-js/html/index.html
+++ b/exercicios-js/html/index.html
@@ -25,6 +25,7 @@
         <a href="exercicios/form/form.html">08 - Formulário</a> |
         <a href="exercicios/imagens.html">09 - Imagens</a> |
         <a href="exercicios/video.html">10 - Video</a> |
+        <a href="exercicios/tagsNaoVisuais.html">11 - TagsNaoVisuais</a> |
     </nav>
     <section id="conteudo"></section>
     <footer>
