--- a/exercicios-js/html/index.html
+++ b/exercicios-js/html/index.html
@@ -10,10 +10,11 @@
    
 </head>
 <body>
-    <header>
+    <header class="exercicios">
         <h1>Exercicios HTML</h1>
     </header>
 
+     <div class="wrapper">
     <nav>
         <a href="exercicios/teste.html">00 - Teste </a> |
         <a href="exercicios/texto1.html">01 - Teste 1 </a> |
@@ -27,9 +28,10 @@
         <a href="exercicios/video.html">10 - Video</a> |
         <a href="exercicios/tagsNaoVisuais.html">11 - TagsNaoVisuais</a> |
     </nav>
+        </div>
     <section id="conteudo"></section>
     <footer>
-        Curso de Web Moderno
+        Curso de Web Modernoº
     </footer>
 
     <script>
@@ -44,11 +46,11 @@
             }
         })
     </script>
-    <footer>
+    <!-- <footer>
         <h3>
             Footer
         </h3>
-    </footer>
+    </footer> -->
     <script src="exercicios/js/script.js"></script>
     <script src="exercicios/js/slider.js"></script>
 </body>
