Origem and ClasseTag.css

--- a/exercicios-js/css/origem.html
+++ b/exercicios-js/css/origem.html
@@ -3,10 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../css/css/origem.css">
     <title>Origem CSS: Externo, Interno e Inline</title>
-    <style>
-        /* ... */
-    </style>
+  
 </head>
 
 <body>
