--- a/exercicios-js/css/classeTag.html
+++ b/exercicios-js/css/classeTag.html
@@ -18,7 +18,7 @@
         <ol class='tag'>7</ol>
         <form class='tag'>8</form>
     </div>
-    <script src="js/tag.js"></script>
+    <script src="../css/js/tag.js"></script>
 </body>
 
 </html>
