--- a/exercicios-js/css/especificidade1.html
+++ b/exercicios-js/css/especificidade1.html
@@ -4,8 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Especificidade CSS</title>
+    <link rel="stylesheet" href="../css/css/especialidade1.css">
+    
     <style>
         /* https://developer.mozilla.org/pt-BR/docs/Web/CSS/Specificity */
+        /* 
+        Em linhas gerais: . . .
+
+        1. Regra com !important
+        2. Seletores mais especificos
+        3. último regra processada (Empate)
+        */
     </style>
 </head>
 
