--- a/exercicios-js/css/seletores.html
+++ b/exercicios-js/css/seletores.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>CSS Selectors</title>
-    <link rel="stylesheet" href="css/tag.css">
+    <link rel="stylesheet" href="../css/css/classeTag.css">
     <style>
         /* ... */
     </style>
@@ -29,7 +29,7 @@
             </ol>
             <div id='aninhado' class='tag'>
                 <div class="tag">
-                    <section class='tag'>
+                    <section class='tag nolabel'>
                         <span class='tag'>1</span>
                         <p class='tag'>2</p>
                         <span class='tag'>3</span>
