--- a/exercicios-js/css/especificidade2.html
+++ b/exercicios-js/css/especificidade2.html
@@ -4,9 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Especificidade CSS</title>
-    <style>
-        /* https://specificity.keegan.st/ */
-    </style>
+    <link rel="stylesheet" href="../css/css/especificidade2.css">
+    <!--  https://specificity.keegan.st/   -->
+    <!-- 
+        1.  Inline
+        2. ID
+        3. Classe, Pseudo-Classe, Atributo
+        4. Elemento, Pseudo-Elementos
+     -->
 </head>
 
 <body>
