--- a/exercicios-js/css/heranca.html
+++ b/exercicios-js/css/heranca.html
@@ -3,10 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/css/heranca.css">
     <title>Herança</title>
-    <style>
-        /* ... */
-    </style>
+    
 </head>
 
 <body>
