--- a/exercicios-js/css/box.html
+++ b/exercicios-js/css/box.html
@@ -3,10 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Box Model</title>
-    <style>
-        /* ... */
-    </style>
+    <link rel="stylesheet" href="../css/css/box-model.css">
+    <title>Box Model</title>    
 </head>
 
 <body>
