Pratices: Margin - Display Block

--- a/exercicios-js/css/alturaLargura.html
+++ b/exercicios-js/css/alturaLargura.html
@@ -3,21 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Altura e Largura</title>
-    <style>
-        body {
-            font-size: 40px;
-            background-color: coral;
-        }
-
-        div {
-            background-color: seagreen;
-        }
-
-        span {
-            background-color: dodgerblue;
-        }
-    </style>
+    <link rel="stylesheet" href="../css/css/alturaLargura.css">
+    <title>Altura e Largura</title>    
 </head>
 
 <body>
