Pratices CSS - Border-box - Display: Inline-block

--- a/exercicios-js/css/tamanhoBox.html
+++ b/exercicios-js/css/tamanhoBox.html
@@ -2,16 +2,27 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Tamanho Box</title>
-    <style>
-        body {
-            font-size: 45px;
-        }
-    </style>
+    <link rel="stylesheet" href="../css/css/tamanhoBox.css">
+    <title>Tamanho Box</title>   
 </head>
 <body>
-    <div>
-        O tamanho do Box é...
+    <div class="box1">
+        <span>O tamanho do Box é...</span>
+    </div>
+    <div class="box2">
+        <span>O tamanho do Box é...</span>
+    </div>
+    <div class="box3">
+        <span>O tamanho do Box é...</span>
+    </div>
+    <div class="box4">
+        <span>O tamanho do Box é...</span>
+    </div>
+    <div class="box5">
+        <span>O tamanho do Box é...</span>
+    </div>
+    <div class="box6">
+        <span>O tamanho do Box é...</span>
     </div>
 </body>
 </html>
