--- a/exercicios-js/css/overflow.html
+++ b/exercicios-js/css/overflow.html
@@ -2,15 +2,9 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../css/css/overflow.css">
     <title>Overflow</title>
-    <style>
-        div {
-            font-size: 40px;
-            height: 100px;
-            width: 260px;
-            border: solid 3px;
-        }
-    </style>
+  
 </head>
 <body>
     <div>
