--- a/exercicios-js/css/float.html
+++ b/exercicios-js/css/float.html
@@ -3,28 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../css/css/float.css">
     <title>Float</title>
-    <style>
-        body {
-            background-color: #222;
-        }
-
-        .c1 {
-            background-color: red;
-        }
-
-        .c2 {
-            background-color: green;
-        }
-        
-        .c3 {
-            background-color: blue;
-        }
-
-        .c4 {
-            background-color: orange;
-        }
-    </style>
+   
 </head>
 
 <body>
