Pratices CORES - # - RGB - RGBA - HSL

--- a/exercicios-js/css/cores.html
+++ b/exercicios-js/css/cores.html
@@ -3,15 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../css/css/cores.css">
     <title>Cores</title>
-    <style>
-        /* 
-            https://www.w3schools.com/colors/colors_hsl.asp
-            
-            https://coolors.co/
-            http://paletton.com/
-        */
-    </style>
+    
 </head>
 
 <body>
