--- a/exercicios-js/css/unidades2.html
+++ b/exercicios-js/css/unidades2.html
@@ -2,10 +2,8 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Unidades #02</title>
-    <style>
-        /* ... */
-    </style>
+    <link rel="stylesheet" href="../css/css/unidade2.css">
+    <title>Unidades #02</title>    
 </head>
 <body>
     <div class="fora">
