--- a/exercicios-js/css/unidades1.html
+++ b/exercicios-js/css/unidades1.html
@@ -3,10 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../css/css/unidade1.css">
     <title>Unidades #01</title>
-    <style>
-        /* ... */
-    </style>
+    
 </head>
 
 <body>
