--- a/exercicios-js/css/texto.html
+++ b/exercicios-js/css/texto.html
@@ -3,20 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../css/css/texto.css">
     <title>Texto</title>
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
-    <style>
-        /* ... */
-        * {
-            margin: 0;
-        }
-
-        body {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-    </style>
+    
 </head>
 
 <body>
