--- a/exercicios-js/css/flexbox1.html
+++ b/exercicios-js/css/flexbox1.html
@@ -2,12 +2,11 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8">    
     <title>Flexbox #01</title>
-    <link rel="stylesheet" href="css/tag.css">
-    <style>
-        /* ... */
-    </style>
+    <link rel="stylesheet" href="css/flexbox1.css">
+    <link rel="stylesheet" href="../css/css/classeTag.css">
+    
 </head>
 
 <body>
@@ -21,7 +20,7 @@
         <div class="tag nolabel">7</div>
         <div class="tag nolabel">8</div>
         <div class="tag nolabel">9</div>
-        <div class="tag nolabel">10</div>
+        <div class="tag nolabel">10</div>        
     </div>
     <script src="js/tag.js"></script>
 </body>
