--- a/exercicios-js/css/flexbox2.html
+++ b/exercicios-js/css/flexbox2.html
@@ -4,10 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Flexbox #02</title>
-    <link rel="stylesheet" href="css/tag.css">
-    <style>
-        /* ... */
-    </style>
+    <link rel="stylesheet" href="../css/css/flexbox2.css">
+    <link rel="stylesheet" href="../css/css/classeTag.css">    
 </head>
 
 <body>
