--- a/exercicios-js/css/flexbox3.html
+++ b/exercicios-js/css/flexbox3.html
@@ -4,10 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Flexbox #03</title>
-    <link rel="stylesheet" href="css/tag.css">
-    <style>
-        /* ... */
-    </style>
+    <link rel="stylesheet" href="../css/css/flexbox3.css">
+    <link rel="stylesheet" href="../css/css/classeTag.css">
+    
 </head>
 
 <body>
