--- a/exercicios-js/css/cssgrid2.html
+++ b/exercicios-js/css/cssgrid2.html
@@ -3,24 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>CSS Grid #02</title>
-    <style>
-        html,
-        body {
-            margin: 20px;
-            height: calc(100% - 40px);
-            background-color: lightgray;
-        }
-        
-        div {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 30px;
-            border: solid 5px dodgerblue;
-            background: #fff;
-        }
-    </style>
+    <link rel="stylesheet" href="../css/css/cssgrid2.css">
+    <title>CSS Grid #02</title>    
 </head>
 
 <body>
