Finishing CSS GRID 03

--- a/exercicios-js/css/cssgrid3.html
+++ b/exercicios-js/css/cssgrid3.html
@@ -4,10 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>CSS Grid #03</title>
-    <link rel="stylesheet" href="css/tag.css">
-    <style>
-        /* ... */
-    </style>
+    <link rel="stylesheet" href="../css/css/cssgrid3.css">
+    <link rel="stylesheet" href="../css/css/classeTag.css">
+    
 </head>
 
 <body>
@@ -16,7 +15,7 @@
     <footer class="tag">RODAPÉ</footer>
     <nav class="tag">NAVEGAÇÃO</nav>
 
-    <script src="js/tag.js"></script>
+    <script src="../css/js/tag.js"></script>
 </body>
 
 </html>
