--- a/exercicios-js/dom/selecionandoElementos2.html
+++ b/exercicios-js/dom/selecionandoElementos2.html
@@ -7,10 +7,9 @@
 </head>
 <body class="conteudo exercicio">
     <div id="primeiro">#primeiro</div>
-    <div>Segundo</div>
+    <div class="segundo">Segundo</div>
     <div class="terceiro ultimo"><span wb-attrib>.terceiro .ultimo</span></div>
-    <script>              
-        // ...
-    </script>
+
+    <script src="js/selecionandoElementos2.js"></script>
 </body>
 </html>
