Practices Selected values - form inputs

--- a/exercicios-js/dom/selecionandoElementos3.html
+++ b/exercicios-js/dom/selecionandoElementos3.html
@@ -4,24 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Selecionar Elementos #03</title>
+    <link rel="stylesheet" href="css/selecionandoElementos3.css">
     <link rel="stylesheet" href="css/estilo.css">
-    <style>
-        form {
-            display: flex;
-            flex-direction: column;
-        }
-        
-        form input,
-        form select,
-        form button {
-            margin: 10px;
-            font-size: 1.6em;
-        }
-    </style>
+    
 </head>
 
 <body class="conteudo exercicio">
-    <h1>Formulário</h1>
+    <h1>Formulário de Pesquisa</h1>
     <form name="pesquisa" action="http://www.google.com.br/search">
         <input type="text" name="q" placeholder="Digite o termo...">
         <select name="hl">
@@ -30,9 +19,7 @@
         </select>
         <button>Pesquisar</button>
     </form>
-    <script>
-        // ...
-    </script>
+   <script src="js/selecionandoElementos3.js"></script>
 </body>
 
 </html>
