--- a/exercicios-js/dom/selecionandoElementos4.html
+++ b/exercicios-js/dom/selecionandoElementos4.html
@@ -21,9 +21,8 @@
     <div>
         <p>Fim</p>
     </div>
-    <script>
-        // ...
-    </script>
+    
+    <script src="js/selecionandoElementos4.js"></script>
 </body>
 
 </html>
