--- a/exercicios-js/dom/acessandoAtributos1.html
+++ b/exercicios-js/dom/acessandoAtributos1.html
@@ -14,9 +14,8 @@
     <div id='primeiro'>
         <img src='http://files.cod3r.com.br/curso-web/logo-estreita.png' alt='logo'>
     </div>
-    <script>
-        // ...
-    </script>
+    
+    <script src="js/acessandoAtributos1.js"></script>
 </body>
 
 </html>
