Practices acessandoAtributos2 - Attributes

--- a/exercicios-js/dom/acessandoAtributos2.html
+++ b/exercicios-js/dom/acessandoAtributos2.html
@@ -16,9 +16,8 @@
             <li>Copo Descartável</li>
         </ul>
     </div>
-    <script>
-        // ...
-    </script>
+    
+    <script src="js/acessandoAtributos2.js"></script>
 </body>
 
 </html>
