Practices AcessandoAtributos3 - documento.querySelector(attributes)

--- a/exercicios-js/dom/acessandoAtributos3.html
+++ b/exercicios-js/dom/acessandoAtributos3.html
@@ -15,9 +15,8 @@
             <li>Copo Descartável</li>
         </ul>
     </div>
-    <script>
-        // ...
-    </script>
+    
+    <script src="js/acessandoAtributos3.js"></script>
 </body>
 
 </html>
