--- a/exercicios-js/dom/acessandoClasses.html
+++ b/exercicios-js/dom/acessandoClasses.html
@@ -11,9 +11,8 @@
     <div>
         Classes
     </div>
-    <script>
-        // ...
-    </script>
+    
+    <script src="js/acessandoClasses.js"></script>
 </body>
 
 </html>
