Practices - Add elements or Pages - body.appendChild(create div)

--- a/exercicios-js/dom/modificandoHTML1.html
+++ b/exercicios-js/dom/modificandoHTML1.html
@@ -8,9 +8,8 @@
 </head>
 
 <body class='conteudo exercicio'>
-    <script>
-        // ...
-    </script>
+    
+    <script src="js/modificandoHtml1.js"></script>
 </body>
 
 </html>
