Practices InnerHTML - modificandoHtml2

--- a/exercicios-js/dom/modificandoHTML2.html
+++ b/exercicios-js/dom/modificandoHTML2.html
@@ -11,9 +11,8 @@
     <div>
         <p>Texto Inicial</p>
     </div>
-    <script>
-        // ...
-    </script>
+    
+    <script src="js/modificandoHtml2.js"></script>
 </body>
 
 </html>
