Practices Events JavaScript

--- a/exercicios-js/dom/trabalhandoComEventos1.html
+++ b/exercicios-js/dom/trabalhandoComEventos1.html
@@ -9,9 +9,9 @@
 
 <body class="conteudo exercicio">
     <div>
-        <a href="https://google.com.br">Google</a>
+        <!-- onclick="navegarem5s(event)" -->
+        <a esperar-5-sec href="https://google.com.br">Google</a>
     </div>
-    <script>
-        // ...
-    </script>
+    
+    <script src="js/trabalhandoComEventos1.js"></script>
 </body>
