Move Divs -  TrabalhandoComEventos2

--- a/exercicios-js/dom/trabalhandoComEventos2.html
+++ b/exercicios-js/dom/trabalhandoComEventos2.html
@@ -8,8 +8,6 @@
 </head>
 
 <body class="conteudo exercicio">
-    <div>Elemento</div>
-    <script>
-        // ...
-    </script>
+    <div class="elemento">Elemento</div>
+    <script src="js/trabalhandoComEventos2.js"></script>
 </body>
