Working with events - Divs within the other - TrabalhandoComEventos3

--- a/exercicios-js/dom/trabalhandoComEventos2.html
+++ b/exercicios-js/dom/trabalhandoComEventos2.html
@@ -8,6 +8,7 @@
 </head>
 
 <body class="conteudo exercicio">
-    <div class="elemento">Elemento</div>
+    <div class="elemento1">Elemento 1</div>
+    <div class="elemento2">Elemento 2</div>
     <script src="js/trabalhandoComEventos2.js"></script>
 </body>
