--- a/ajax/xmlHttpRequest2.html
+++ b/ajax/xmlHttpRequest2.html
@@ -5,23 +5,15 @@
     <meta charset='UTF-8'>
     <title>XMLHttpRequest #02</title>
     <link rel='stylesheet' href='css/estilo.css'>
+    <link rel="stylesheet" href="css/xmlHttpRequest2.css">
     <style>
-        input[type=file] {
-            display: flex;
-            margin: 10px;
-            padding: 40px;
-            font-size: 40px;
-            background: crimson;
-            border-radius: 20px;
-        }
+        
     </style>
 </head>
 
 <body class="conteudo exercicio">
     <input type="file" name="arquivo" />
     <div class="progresso"></div>
-
-    <script>
-        // ...
-    </script>
+    
+    <script src="js/xmlHttpRequest2.js"></script>
 </body>
