--- a/ajax/xmlHttpRequest3.html
+++ b/ajax/xmlHttpRequest3.html
@@ -9,8 +9,6 @@
 
 <body class="conteudo exercicio">
     <h1>Estados</h1>
-
-    <script>
-        // ...
-    </script>
+    
+    <script src="js/xmlHttpRequest3.js"></script>
 </body>
