--- a/ajax/fetch1.html
+++ b/ajax/fetch1.html
@@ -10,7 +10,5 @@
 <body class="conteudo exercicio">
     <h1>Estados</h1>
 
-    <script>
-        // ...
-    </script>
+    <script src="js/fetch1.js"></script>
 </body>
