--- a/ajax/fetch2.html
+++ b/ajax/fetch2.html
@@ -5,19 +5,8 @@
     <meta charset='UTF-8'>
     <title>Fetch API #02</title>
     <link rel='stylesheet' href='css/estilo.css'>
-    <style>
-        form {
-            display: flex;
-            flex-direction: column;
-        }
-
-        form input,
-        form select,
-        form button {
-            margin: 10px;
-            font-size: 1.6em;
-        }
-    </style>
+    <link rel="stylesheet" href="css/fetch2.css">
+    
 </head>
 
 <body class="conteudo exercicio">
@@ -28,7 +17,6 @@
         <button>Salvar</button>
     </form>
     <div id="resultado"></div>
-    <script>
-        // ...
-    </script>
+    
+    <script src="js/fetch2.js"></script>
 </body>
