--- a/ajax/axios1.html
+++ b/ajax/axios1.html
@@ -11,7 +11,5 @@
 <body class="conteudo exercicio">
     <h1>Estados</h1>
 
-    <script>
-        // ...
-    </script>
+ <script src="js/axios1.js"></script>
 </body>
