--- a/ajax/jqueryAjax.html
+++ b/ajax/jqueryAjax.html
@@ -13,7 +13,5 @@
     <div id="get"></div>
     <div id="post"></div>
 
-    <script>
-        // ...
-    </script>
+    <script src="js/ajax+Jquery.js"></script>
 </body>
