--- a/ajax/spa/index.html
+++ b/ajax/spa/index.html
@@ -5,17 +5,7 @@
     <meta charset='UTF-8'>
     <title>Mini SPA</title>
     <link rel='stylesheet' href='../css/estilo.css'>
-    <style>
-        nav {
-            font-size: 2em;
-        }
-
-        nav a {
-            text-decoration: none;
-            color: #FFF;
-            padding: 0 10px;
-        }
-    </style>
+    <link rel="stylesheet" href="../css/sap.css">
 </head>
 
 <body class="conteudo">
@@ -24,7 +14,6 @@
         <a href wm-link="linguagens.html" wm-destino=".pagina">Linguagens</a>
     </nav>
     <div class="pagina"></div>
-    <script>
-        // ...
-    </script>
+   
+   <script src="../js/sap.js"></script>
 </body>
