Loader Archive SCSS (SASS) + WebPack

--- a/weback/public/index.html
+++ b/weback/public/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1> Praticando Web Pack</h1>
+    <button class="botao">Teste</button>
     
     <script src="./principal.js"></script>
 </body>
