--- a/weback/public/index.html
+++ b/weback/public/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     <h1> Praticando Web Pack</h1>
-    <button class="botao">Teste</button>
+    <!-- <button class="botao">Cadastrar</button>
+    <button class="botao">Listar</button>
+    <button class="botao">Pesquisar</button>
+    <button class="botao">Alterar</button>
+    <button class="botao">Excluir</button> -->
+    
     
     <script src="./principal.js"></script>
 </body>
