--- a/jquery/entendendoJQuery.html
+++ b/jquery/entendendoJQuery.html
@@ -13,7 +13,5 @@
     <div>1</div>
     <div>2</div>
 
-    <script>
-        // ...
-    </script>
+    <script src="js/entendendoJquery.js"></script>
 </body>
