Selecting Elements + Jquery

--- a/jquery/selecionandoElementos1.html
+++ b/jquery/selecionandoElementos1.html
@@ -6,23 +6,8 @@
     <title>Selecionando Elementos #01</title>
     <link rel='stylesheet' href='css/estilo.css'>
     <script src='js/jquery.js'></script>
-    <style>
-        .negrito {
-            font-weight: bold;
-        }
-
-        form {
-            display: flex;
-            flex-direction: column;
-        }
-
-        form input,
-        form select,
-        form button {
-            margin: 10px;
-            font-size: 1.6em;
-        }
-    </style>
+    <link rel="stylesheet" href="css/selecionandoElementos1.css">
+   
 </head>
 
 <body class='conteudo exercicio'>
@@ -48,7 +33,5 @@
         <input type='file' name='arquivo'>
     </form>
 
-    <script>
-        // ...
-    </script>
+    <script src="js/selecionandoElementos1.js"></script>
 </body>
