--- a/jquery/entendendoJQuery.html
+++ b/jquery/entendendoJQuery.html
@@ -10,8 +10,11 @@
 
 <body class="conteudo exercicio">
     <h1>Entendendo jQuery</h1>
+<div class="wrapper">
     <div>1</div>
     <div>2</div>
+</div>
+
 
     <script src="js/entendendoJquery.js"></script>
 </body>
