--- a/jquery/selecionandoElementos2.html
+++ b/jquery/selecionandoElementos2.html
@@ -6,43 +6,9 @@
     <title>Selecionando Elementos #02</title>
     <link rel='stylesheet' href='css/estilo.css'>
     <script src='js/jquery.js'></script>
+    <link rel="stylesheet" href="css/selecionandoElementos2.css">
     <style>
-        body {
-            display: grid;
-            grid-template-columns: 250px 1fr;
-            grid-template-rows: 95px 1fr 55px;
-            grid-template-areas: "cabecalho cabecalho" "menu conteudo" "rodape rodape";
-        }
-
-        header {
-            grid-area: cabecalho;
-            background-color: #fff;
-            color: #000;
-            padding-left: 20px;
-        }
-
-        aside.menu {
-            grid-area: menu;
-        }
-
-        main {
-            grid-area: conteudo;
-            background-color: #dedede;
-            color: #000;
-            padding: 10px;
-        }
-
-        footer {
-            grid-area: rodape;
-            background-color: #fff;
-            color: #000;
-            padding-left: 20px;
-        }
-
-        a {
-            text-decoration: none;
-            color: white;
-        }
+        
     </style>
 </head>
 
@@ -80,7 +46,6 @@
     <footer>
         <p>Cod3r Ensino</p>
     </footer>
-    <script>
-        // ...
-    </script>
+   
+    <script src="js/selecionandoElementos2.js"></script>
 </body>
