Jquery - Practices: append, prepend, html

--- a/jquery/modificandoHTML1.html
+++ b/jquery/modificandoHTML1.html
@@ -13,8 +13,7 @@
     <div id='conteudo1'></div>
     <div id='conteudo2'></div>
     <div id='conteudo3'></div>
+    <div>SEM ID</div>
 
-    <script>
-        // ...
-    </script>
+   <script src="js/modificandoHTML1.js"></script>
 </body>
