Update CSS Modificando HTML#01

--- a/jquery/modificandoHTML1.html
+++ b/jquery/modificandoHTML1.html
@@ -10,10 +10,12 @@
 
 <body class='conteudo exercicio'>
     <h1>Modificando HTML #01</h1>
+<div class="wrapper">
     <div id='conteudo1'></div>
     <div id='conteudo2'></div>
     <div id='conteudo3'></div>
-    <div>SEM ID</div>
+    <div id='conteudo4'></div>
+</div>
 
    <script src="js/modificandoHTML1.js"></script>
 </body>
