Practices - Jquery, Append, Prepend, Wrap, WrapAll + replaceWith

--- a/jquery/modificandoHTML1.html
+++ b/jquery/modificandoHTML1.html
@@ -17,5 +17,19 @@
     <div id='conteudo4'></div>
 </div>
 
+<div class="wrapper">
+    <div id='conteudo1'></div>
+    <div id='conteudo2'></div>
+    <div id='conteudo3'></div>
+    <div id='conteudo4'></div>
+</div>
+
+<div class="wrapper">
+    <div id='conteudo1'></div>
+    <div id='conteudo2'></div>
+    <div id='conteudo3'></div>
+    <div id='conteudo4'></div>
+</div>
+
    <script src="js/modificandoHTML1.js"></script>
 </body>
