--- a/jquery/modificandoHTML2.html
+++ b/jquery/modificandoHTML2.html
@@ -16,7 +16,5 @@
     <p class='numero'>4</p>
     <p class='numero'>5</p>
 
-    <script>
-        // ...
-    </script>
+    <script src="js/modificandoHTML2.js"></script>
 </body>
