--- a/jquery/modificandoHTML3.html
+++ b/jquery/modificandoHTML3.html
@@ -12,14 +12,6 @@
     <h1>Modificando HTML #03</h1>
     <div id='conteudo'></div>
 
-    <script>
-        const pessoas = [
-            { nome: 'Ana', nota: 9.1 },
-            { nome: 'Bianca', nota: 8.4 },
-            { nome: 'Carlos', nota: 7.6 },
-            { nome: 'Julia', nota: 9.7 }
-        ]
-        
-        // ...
-    </script>
+
+   <script src="js/modificandoHTML3.js"></script>
 </body>
