Practices Jquery + CSS

--- a/jquery/manipulandoCSS.html
+++ b/jquery/manipulandoCSS.html
@@ -14,7 +14,6 @@
     <div id='div2'>2</div>
     <div id='div3'>3</div>
     <div id='resultado'></div>
-    <script>
-        // ...
-    </script>
+   
+    <script src="js/manipulandoCSS.js"></script>
 </body>
