--- a/jquery/eventos1.html
+++ b/jquery/eventos1.html
@@ -6,11 +6,8 @@
     <title>Eventos #01</title>
     <link rel='stylesheet' href='css/estilo.css'>
     <script src='js/jquery.js'></script>
-    <style>
-        input {
-            font-size: 2em;
-        }
-    </style>
+    <link rel="stylesheet" href="css/eventos1.css">
+    
 </head>
 
 <body class='conteudo exercicio'>
@@ -19,7 +16,5 @@
     <div id='cliques'>Cliques: 0</div>
     <input type="text" placeholder="Cor de Background">
 
-    <script>
-        // ...
-    </script>
+    <script src="js/eventos1.js"></script>
 </body>
