--- a/jquery/eventos2.html
+++ b/jquery/eventos2.html
@@ -6,11 +6,8 @@
     <title>Eventos #02</title>
     <link rel='stylesheet' href='css/estilo.css'>
     <script src='js/jquery.js'></script>
-    <style>
-        input {
-            font-size: 2em;
-        }
-    </style>
+    <link rel="stylesheet" href="css/eventos2.css">
+    
 </head>
 
 <body class='conteudo exercicio'>
@@ -20,7 +17,6 @@
     <br>
     <input type="text" placeholder="Digite e Selecione">
     <div id="resultado2">?</div>
-    <script>
-        // ...
-    </script>
+    
+    <script src="js/eventos2.js"></script>
 </body>
