Practices of Animation Jquery

--- a/jquery/animacao1.html
+++ b/jquery/animacao1.html
@@ -6,15 +6,8 @@
     <title>Animação #01</title>
     <link rel='stylesheet' href='css/estilo.css'>
     <script src='js/jquery.js'></script>
-    <style>
-        div {
-            text-align: center;
-        }
-        button {
-            font-size: 1.8em;
-            margin: 10px;
-        }
-    </style>
+    <link rel="stylesheet" href="css/animacao1.css">
+
 </head>
 
 <body class='conteudo exercicio'>
@@ -22,7 +15,5 @@
     <button>Iniciar</button>
     <div id='animar'>Animar!</div>
 
-    <script>        
-        // ...
-    </script>
+    <script src="js/animacao1.js"></script>
 </body>
