Create Animation with Jquery

--- a/jquery/animacao2.html
+++ b/jquery/animacao2.html
@@ -6,28 +6,12 @@
     <title>Animação #02</title>
     <link rel='stylesheet' href='css/estilo.css'>
     <script src='js/jquery.js'></script>
-    <style>
-        body {
-            position: relative;
-            background-color: #999;
-            color: #000;
-        }
-
-        div {
-            position: absolute;
-            display: inline;
-            border: solid 10px #000;
-            padding: 50px;
-            font-size: 3em;
-            background-color: crimson;
-        }
-    </style>
+    <link rel="stylesheet" href="css/animacao2.css">
+    
 </head>
 
 <body>
     <div>Animar!</div>
 
-    <script>
-        // ...
-    </script>
+    <script src="js/animacao2.js"></script>
 </body>
