Update Practices - Bootstrap

--- a/bootstrap/exercicios/paginas/grid.html
+++ b/bootstrap/exercicios/paginas/grid.html
@@ -1,49 +1,58 @@
-<!-- Título (jumbotron) -->
-<!-- Breadcrumb -->
+<div class="jumbotron p-4 my-1">
+    <h1 class="display-4">Grid</h1>
+    <p class="lead m-1">Alguns recuros importantes Grid</p>
 
-<p class="lead">
-    <a href="https://getbootstrap.com/docs/4.0/layout/grid/"
-        target="_black">Documentação Oficial</a>
-</p>
+    <nav class="mb-5">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item">
+                <a href="#/paginas/bemVindo.html">Home</a>
+            </li>
+            <li class="breadcrumb-item active">Grid</li>
+        </ol>
+    </nav>
 
-<div class="exercicio">
-    <h1>1. Grid Básica</h1>
-    <hr>
+    <p class="lead">
+        <a href="https://getbootstrap.com/docs/4.0/layout/grid/" target="_black">Documentação Oficial</a>
+    </p>
 
-    <!-- Grid Básica -->
+    <div class="exercicio">
+        <h1>1. Grid Básica</h1>
+        <hr>
 
-    <h1 class="mt-5">2. Grid Responsiva</h1>
-    <hr>
+        <!-- Grid Básica -->
 
-    <!-- Grid Responsiva -->
+        <h1 class="mt-5">2. Grid Responsiva</h1>
+        <hr>
 
-    <h1 class="mt-5">3. Quebra de Linha</h1>
-    <hr>
+        <!-- Grid Responsiva -->
 
-    <!-- Quebra de Linha -->
+        <h1 class="mt-5">3. Quebra de Linha</h1>
+        <hr>
 
-    <h1 class="mt-5">4. Ordem</h1>
-    <hr>
+        <!-- Quebra de Linha -->
 
-    <!-- Ordem -->
+        <h1 class="mt-5">4. Ordem</h1>
+        <hr>
 
-    <h1 class="mt-5">5. Offset</h1>
-    <hr>
+        <!-- Ordem -->
 
-    <!-- Offset -->
+        <h1 class="mt-5">5. Offset</h1>
+        <hr>
 
-    <h1 class="mt-5">6. Alinhamento</h1>
-    <hr>
+        <!-- Offset -->
 
-    <!-- Alinhamento -->
-</div>
+        <h1 class="mt-5">6. Alinhamento</h1>
+        <hr>
 
-<style>
-    .exercicio div {
-        font-size: 1.5em;
-    }
+        <!-- Alinhamento -->
+    </div>
 
-    .h-300 {
-        height: 300px;
-    }
-</style>
+    <style>
+        .exercicio div {
+            font-size: 1.5em;
+        }
+
+        .h-300 {
+            height: 300px;
+        }
+    </style>
