--- a/bootstrap/exercicios/paginas/grid.html
+++ b/bootstrap/exercicios/paginas/grid.html
@@ -65,10 +65,28 @@
 
         <!-- Quebra de Linha -->
 
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-3 bg-primary">1</div>
+                <div class="col-3 bg-danger">2</div>
+                <div class="col-7 bg-success">3</div> <!-- Outra quebra de Linha-->
+                <div class="w-100"></div> <!--Quebra de Linha-->
+                <div class="col-3 bg-warning">3</div>
+            </div>
+        </div>
+
         <h1 class="mt-5">4. Ordem</h1>
         <hr>
 
         <!-- Ordem -->
+
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-4 order-5 bg-primary">1</div>
+                <div class="col-4 order-12 bg-danger">2</div>
+                <div class="col-4 order-1 bg-warning">3</div>
+            </div>
+        </div>
 
         <h1 class="mt-5">5. Offset</h1>
         <hr>
