--- a/bootstrap/exercicios/index.html
+++ b/bootstrap/exercicios/index.html
@@ -27,7 +27,7 @@
                 <a class="dropdown-item" wm-link="#/paginas/fundamentos.html">Fundamentos</a>
                 <a class="dropdown-item" wm-link="#/paginas/grid.html">Sistema de Grid</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" wm-link="#/pagina/componentes.html">Componente</a>
+                <a class="dropdown-item" wm-link="#/paginas/componentes.html">Componente</a>
                 <a class="dropdown-item" wm-link="#/paginas/formulario.html">Formulário</a>
               </div>
             </li>            
@@ -37,10 +37,11 @@
 
       <main class="p-3" wm-link-destino></main>
 
+    
+    <script src="js/navegacao.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/navegacao.js"></script>
 </body>
 
 </html>
