--- a/bootstrap/exercicios/paginas/componentes.html
+++ b/bootstrap/exercicios/paginas/componentes.html
@@ -20,6 +20,31 @@
 
 <!-- Botões -->
 
+<div class="mb-3">
+    <button class="btn btn-primary">Salvar</button>
+    <button class="btn btn-secondary">Cancelar</button>
+    <button class="btn btn-outline-success">Finalizar</button>
+    <button class="btn btn-danger">Excluir</button>
+    <button class="btn btn-warning" data-toggle="button">Selecione</button>
+</div>
+
+<div class="btn-group mb-3">
+    <button class="btn btn-info">Esquerdo</button>
+    <button class="btn btn-info active">Centro</button>
+    <button class="btn btn-info">Direita</button>
+</div>
+
+<div class="dropdown">
+    <button class="btn btn-danger btn-lg dropdown-toggle" data-toggle="dropdown">
+        Comprar!
+    </button>
+    <div class="dropdown-menu">
+        <a href="#" class="dropdown-item">Paypal</a>
+        <a href="#" class="dropdown-item">PagSeguro</a>
+    </div>
+</div>
+
+
 <h1 class="mt-5">2. Progresso -
     <small>
         <a href="https://getbootstrap.com/docs/4.0/components/progress/" target="_black">Documentação Oficial</a>
