--- a/bootstrap/exercicios/paginas/componentes.html
+++ b/bootstrap/exercicios/paginas/componentes.html
@@ -53,6 +53,24 @@
 <hr>
 
 <!-- Progresso -->
+<div class="container-fluid">
+
+    <div class="progress mb-4">
+        <div class="progress-bar" style="width:25%"></div>
+    </div>
+
+<div class="progress mb-4">
+    <div class="progress-bar progress-bar-striped bg-success" style="width: 50%;">50%</div>       
+</div>
+
+    <div class="progress" style="height: 20px;">
+        <div class="progress-bar" style="width: 15%;">15%</div>
+        <div class="progress-bar bg-danger" style="width: 30%;">30%</div>
+        <div class="progress-bar bg-info" style="width: 20%;">20%</div>
+        <div class="div progress-bar bg-warning" style="width: 28%;">28%</div>
+    </div>
+
+
 
 <h1 class="mt-5">3. Mensagens (Alertas) -
     <small>
