--- a/bootstrap/exercicios/paginas/componentes.html
+++ b/bootstrap/exercicios/paginas/componentes.html
@@ -70,8 +70,6 @@
         <div class="div progress-bar bg-warning" style="width: 28%;">28%</div>
     </div>
 
-
-
 <h1 class="mt-5">3. Mensagens (Alertas) -
     <small>
         <a href="https://getbootstrap.com/docs/4.0/components/alerts/" target="_black">Documentação Oficial</a>
@@ -80,6 +78,26 @@
 <hr>
 
 <!-- Alertas -->
+
+
+<div class="alert alert-success">
+    Operação Relizada com Sucesso!
+</div>
+
+<div class="alert alert-warning">
+    <strong>Cuidado!</strong>r Operação gerou um impacto no sistema
+</div>
+
+<div class="alert alert-danger">
+    <strong>Erro!</strong>Ocorreu um erro Inesperado!
+    <a href="#" class="alert-link">Mais detalhes</a>
+</div>
+
+<div class="alert alert-success">
+    <h4 class="alert-heading">Parabéns!</h4>
+    <hr>
+    <p class="mb-0"> Pode ficar Orgulhoso</p>
+</div>
 
 <h1 class="mt-5">4. Paginação -
     <small>
