--- a/bootstrap/exercicios/paginas/componentes.html
+++ b/bootstrap/exercicios/paginas/componentes.html
@@ -142,6 +142,18 @@
 
 <!-- Tooltip -->
 
+<div class="alert alert-warning">
+    Precisa chamar uma função JS!
+    <strong>E agora ?</strong>
+</div>
+
+<button class="btn btn-danger" data-toggle="tooltip"
+data-plecement="top" title="Pense Antes!">
+Excluir
+</button>
+    
+
+
 <h1 class="mt-5">6. Slider -
     <small>
         <a href="https://getbootstrap.com/docs/4.0/components/carousel/" target="_black">Documentação Oficial</a>
