--- a/bootstrap/exercicios/paginas/componentes.html
+++ b/bootstrap/exercicios/paginas/componentes.html
@@ -11,167 +11,216 @@
         </ol>
     </nav>
 
-<h1>1. Botões -
-    <small>
-        <a href="https://getbootstrap.com/docs/4.0/components/buttons/" target="_black">Documentação Oficial</a>
-    </small>
-</h1>
-<hr>
-
-<!-- Botões -->
-
-<div class="mb-3">
-    <button class="btn btn-primary">Salvar</button>
-    <button class="btn btn-secondary">Cancelar</button>
-    <button class="btn btn-outline-success">Finalizar</button>
-    <button class="btn btn-danger">Excluir</button>
-    <button class="btn btn-warning" data-toggle="button">Selecione</button>
-</div>
-
-<div class="btn-group mb-3">
-    <button class="btn btn-info">Esquerdo</button>
-    <button class="btn btn-info active">Centro</button>
-    <button class="btn btn-info">Direita</button>
-</div>
-
-<div class="dropdown">
-    <button class="btn btn-danger btn-lg dropdown-toggle" data-toggle="dropdown">
-        Comprar!
-    </button>
-    <div class="dropdown-menu">
-        <a href="#" class="dropdown-item">Paypal</a>
-        <a href="#" class="dropdown-item">PagSeguro</a>
-    </div>
-</div>
-
-
-<h1 class="mt-5">2. Progresso -
-    <small>
-        <a href="https://getbootstrap.com/docs/4.0/components/progress/" target="_black">Documentação Oficial</a>
-    </small>
-</h1>
-<hr>
-
-<!-- Progresso -->
-<div class="container-fluid">
-
-    <div class="progress mb-4">
-        <div class="progress-bar" style="width:25%"></div>
-    </div>
-
-<div class="progress mb-4">
-    <div class="progress-bar progress-bar-striped bg-success" style="width: 50%;">50%</div>       
-</div>
-
-    <div class="progress" style="height: 20px;">
-        <div class="progress-bar" style="width: 15%;">15%</div>
-        <div class="progress-bar bg-danger" style="width: 30%;">30%</div>
-        <div class="progress-bar bg-info" style="width: 20%;">20%</div>
-        <div class="div progress-bar bg-warning" style="width: 28%;">28%</div>
-    </div>
-
-<h1 class="mt-5">3. Mensagens (Alertas) -
-    <small>
-        <a href="https://getbootstrap.com/docs/4.0/components/alerts/" target="_black">Documentação Oficial</a>
-    </small>
-</h1>
-<hr>
-
-<!-- Alertas -->
-
-
-<div class="alert alert-success">
-    Operação Relizada com Sucesso!
-</div>
-
-<div class="alert alert-warning">
-    <strong>Cuidado!</strong>r Operação gerou um impacto no sistema
-</div>
-
-<div class="alert alert-danger">
-    <strong>Erro!</strong>Ocorreu um erro Inesperado!
-    <a href="#" class="alert-link">Mais detalhes</a>
-</div>
-
-<div class="alert alert-success">
-    <h4 class="alert-heading">Parabéns!</h4>
+    <h1>1. Botões -
+        <small>
+            <a href="https://getbootstrap.com/docs/4.0/components/buttons/" target="_black">Documentação Oficial</a>
+        </small>
+    </h1>
     <hr>
-    <p class="mb-0"> Pode ficar Orgulhoso</p>
-</div>
 
-<h1 class="mt-5">4. Paginação -
-    <small>
-        <a href="https://getbootstrap.com/docs/4.0/components/pagination/" target="_black">Documentação Oficial</a>
-    </small>
-</h1>
-<hr>
+    <!-- Botões -->
 
-<!-- Peginação -->
+    <div class="mb-3">
+        <button class="btn btn-primary">Salvar</button>
+        <button class="btn btn-secondary">Cancelar</button>
+        <button class="btn btn-outline-success">Finalizar</button>
+        <button class="btn btn-danger">Excluir</button>
+        <button class="btn btn-warning" data-toggle="button">Selecione</button>
+    </div>
 
-<div>
-    <nav>
-        <ul class="pagination">
-            <li class="page-item">
-                <a href="#" class="page-link">Anterior</a>
-            </li>
-            <li class="page-item">
-                <a href="#" class="page-link">1</a>
-            </li>
-            <li class="page-item">
-                <a href="#" class="page-link">2</a>
-            </li>
-            <li class="page-item active">
-                <a href="#" class="page-link">3</a>
-            </li>
-            <li class="page-item">
-                <a href="#" class="page-link">4</a>
-            </li>
-            <li class="page-item">
-                <a href="#" class="page-link">5</a>
-            </li>
-        </ul>
-    </nav>
-</div>
+    <div class="btn-group mb-3">
+        <button class="btn btn-info">Esquerdo</button>
+        <button class="btn btn-info active">Centro</button>
+        <button class="btn btn-info">Direita</button>
+    </div>
 
-<h1 class="mt-5">5. Tooltip -
-    <small>
-        <a href="https://getbootstrap.com/docs/4.0/components/tooltip/" target="_black">Documentação Oficial</a>
-    </small>
-</h1>
-<hr>
-
-<!-- Tooltip -->
-
-<div class="alert alert-warning">
-    Precisa chamar uma função JS!
-    <strong>E agora ?</strong>
-</div>
-
-<button class="btn btn-danger" data-toggle="tooltip"
-data-plecement="top" title="Pense Antes!">
-Excluir
-</button>
-    
+    <div class="dropdown">
+        <button class="btn btn-danger btn-lg dropdown-toggle" data-toggle="dropdown">
+            Comprar!
+        </button>
+        <div class="dropdown-menu">
+            <a href="#" class="dropdown-item">Paypal</a>
+            <a href="#" class="dropdown-item">PagSeguro</a>
+        </div>
+    </div>
 
 
-<h1 class="mt-5">6. Slider -
-    <small>
-        <a href="https://getbootstrap.com/docs/4.0/components/carousel/" target="_black">Documentação Oficial</a>
-    </small>
-</h1>
-<hr>
+    <h1 class="mt-5">2. Progresso -
+        <small>
+            <a href="https://getbootstrap.com/docs/4.0/components/progress/" target="_black">Documentação Oficial</a>
+        </small>
+    </h1>
+    <hr>
 
-<!-- Slider -->
+    <!-- Progresso -->
+    <div class="container-fluid">
 
-<h1 class="mt-5">7. Accordion -
-    <small>
-        <a href="https://getbootstrap.com/docs/4.0/components/collapse/" target="_black">Documentação Oficial</a>
-    </small>
-</h1>
-<hr>
+        <div class="progress mb-4">
+            <div class="progress-bar" style="width:25%"></div>
+        </div>
 
-<!-- Accordion -->
+        <div class="progress mb-4">
+            <div class="progress-bar progress-bar-striped bg-success" style="width: 50%;">50%</div>
+        </div>
 
-<script>
+        <div class="progress" style="height: 20px;">
+            <div class="progress-bar" style="width: 15%;">15%</div>
+            <div class="progress-bar bg-danger" style="width: 30%;">30%</div>
+            <div class="progress-bar bg-info" style="width: 20%;">20%</div>
+            <div class="div progress-bar bg-warning" style="width: 28%;">28%</div>
+        </div>
+
+        <h1 class="mt-5">3. Mensagens (Alertas) -
+            <small>
+                <a href="https://getbootstrap.com/docs/4.0/components/alerts/" target="_black">Documentação Oficial</a>
+            </small>
+        </h1>
+        <hr>
+
+        <!-- Alertas -->
+
+
+        <div class="alert alert-success">
+            Operação Relizada com Sucesso!
+        </div>
+
+        <div class="alert alert-warning">
+            <strong>Cuidado!</strong>r Operação gerou um impacto no sistema
+        </div>
+
+        <div class="alert alert-danger">
+            <strong>Erro!</strong>Ocorreu um erro Inesperado!
+            <a href="#" class="alert-link">Mais detalhes</a>
+        </div>
+
+        <div class="alert alert-success">
+            <h4 class="alert-heading">Parabéns!</h4>
+            <hr>
+            <p class="mb-0"> Pode ficar Orgulhoso</p>
+        </div>
+
+        <h1 class="mt-5">4. Paginação -
+            <small>
+                <a href="https://getbootstrap.com/docs/4.0/components/pagination/" target="_black">Documentação
+                    Oficial</a>
+            </small>
+        </h1>
+        <hr>
+
+        <!-- Peginação -->
+
+        <div>
+            <nav>
+                <ul class="pagination">
+                    <li class="page-item">
+                        <a href="#" class="page-link">Anterior</a>
+                    </li>
+                    <li class="page-item">
+                        <a href="#" class="page-link">1</a>
+                    </li>
+                    <li class="page-item">
+                        <a href="#" class="page-link">2</a>
+                    </li>
+                    <li class="page-item active">
+                        <a href="#" class="page-link">3</a>
+                    </li>
+                    <li class="page-item">
+                        <a href="#" class="page-link">4</a>
+                    </li>
+                    <li class="page-item">
+                        <a href="#" class="page-link">5</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+
+        <h1 class="mt-5">5. Tooltip -
+            <small>
+                <a href="https://getbootstrap.com/docs/4.0/components/tooltip/" target="_black">Documentação Oficial</a>
+            </small>
+        </h1>
+        <hr>
+
+        <!-- Tooltip -->
+
+        <div class="alert alert-warning">
+            Precisa chamar uma função JS!
+            <strong>E agora ?</strong>
+        </div>
+
+        <button class="btn btn-danger" data-toggle="tooltip" data-plecement="top" title="Pense Antes!">
+            Excluir
+        </button>
+
+
+
+        <h1 class="mt-5">6. Slider -
+            <small>
+                <a href="https://getbootstrap.com/docs/4.0/components/carousel/" target="_black">Documentação
+                    Oficial</a>
+            </small>
+        </h1>
+        <hr>
+
+        <!-- Slider -->
+
+        <div>
+            <div id="slider" class="corousel slide" data-ride="carousel">
+                <div class="carousel-inner bg-dark">
+                    <div class="carousel-item active">
+                        <img src="/imgs/slide1.png" alt="Slide1" class="d-block mx-auto">
+                    </div>
+
+                    <div class="carousel-item">
+                        <img src="/imgs/slide2.png" alt="Slide2" class="d-block mx-auto">
+                    </div>
+
+                    <div class="carousel-item">
+                        <img src="/imgs/slide3.png" alt="Slide3" class="d-block mx-auto">
+                    </div>
+
+                    <!-- Prev -->
+                    <a href="#slider" class="carousel-control-prev" data-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                    </a>
+
+                    <a href="#slider" class="carousel-control-next" data-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <h1 class="mt-5">7. Accordion -
+            <small>
+                <a href="https://getbootstrap.com/docs/4.0/components/collapse/" target="_black">Documentação
+                    Oficial</a>
+            </small>
+        </h1>
+        <hr>
+
+        <!-- Accordion -->
+
+        <div>
+            <div class="mb-5" id="accordion">
+                <div class="card">
+                    <div class="card-header" id="pergunta1">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link" data-toggle="colapse" data-target="#resposta1">
+                                Quem é o professora de Programação mais legal ?
+                            </button>
+                        </h5>
+                    </div>
+                    <div class="collapse" id="resposta1" data-parent="#accordion">
+                        <div class="card-body">
+                            Posso dizer?
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <script>
     // ...
-</script>
+        </script>
