--- a/bootstrap/exercicios/paginas/formulario.html
+++ b/bootstrap/exercicios/paginas/formulario.html
@@ -10,8 +10,69 @@
             <li class="breadcrumb-item active">Componentes</li>
         </ol>
     </nav>
-<p class="lead">
-    <a href="https://getbootstrap.com/docs/4.0/components/forms/" target="_black">Documentação Oficial</a>
-</p>
+    <p class="lead">
+        <a href="https://getbootstrap.com/docs/4.0/components/forms/" target="_black">Documentação Oficial</a>
+    </p>
 
-<!-- Formulário -->
+    <!-- Formulário -->
+
+    <div class="card">
+        <div class="card-header">
+            <h5 class="mb-0">
+                Exemplo Formulário
+            </h5>
+        </div>
+
+        <div class="card-body">
+            <form action="" class="container-fluid">
+                <div class="form-row">
+                    <div class="col-12">
+                        <div class="form-group">
+                            <label for="nome">Nome</label>
+                            <input type="text" class="form-control" id="nome" placeholder="Informe o Nome">
+
+                        </div>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="col-12 col-md-6">
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text">@</span>
+                                </div>
+                                <input type="email" class="form-control" id="email" placeholder="Informe o E-mail">
+                                <small class="form-text text-success">
+                                    Enviaremos um E-mail para confirmar o cadastro.
+                                </small>
+                            </div>
+                        </div>
+
+                        <div class="col-12 col-md-6">
+                            <div class="form-group">
+                                <label for="LinguagemPreferida">Linguagem</label>
+                                <select id="LinguagemPreferida" class="form-control">
+                                    <option value=""> Selecione </option>
+                                    <option> JS </option>
+                                    <option> Java </option>
+                                    <option> Phyton </option>
+                                    <option> Ruby </option>
+                                    <option> PHP </option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <hr>
+                <div class="form-row mb-0">
+                    <div class="col-12 d-flex justify-content-end">
+                        <button class="btn btn-primary mr-2" type="submit">Salvar</button>
+                        <button class="btn btn-secondary" type="reset">Cancelar</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+
+    </div>
