--- a/vue/exercicios/ifFor.html
+++ b/vue/exercicios/ifFor.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>If & For</title>
     <link rel="stylesheet" href="/css/estilo.css">
     <script src="/js/vue.min.js"></script>
 </head>
+
 <body class="exercicio">
 
-    <script>
-        // ...
-    </script>
+    <div id="app">
+        <p v-for="(aluno, i) in alunos">
+            {{i+1}} {{aluno.nome}} - {{aluno.nota}}
+            <span v-if="aluno.nota >= 9">Quadro de Honra</span>
+            <span v-else-if="aluno.nota >=7">Aprovado</span>
+            <span v-else-if="aluno.nota >=3">Recuperação</span>
+            <span v-else>Reprovado</span>
+        </p>
+
+        <!-- V-for de 1 a 50 -->
+        <ul style="list-style: none;">
+            <li v-for="n in 8">
+                <span v-show="n >=4">{{n}}</span>
+            </li>
+        </ul>
+    </div>
 </body>
+
+
+<script src="./js/ifFor.js"></script>
+
 </html>
