--- a/vue/exercicios/estilo.html
+++ b/vue/exercicios/estilo.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>Aplicando Estilo</title>
     <link rel="stylesheet" href="/css/estilo.css">
     <script src="/js/vue.min.js"></script>
-    <style>
-        .vermelho {
-            background-color: red;
-        }
-    </style>
-</head>
-<body class="exercicio">
+    <link rel="stylesheet" href="./css/estilojs.css">
 
-    <script>
-        // ...
-    </script>
+</head>
+
+<body class="exercicio">
+    <div id="app" @click="aplicarCor = !aplicarCor" :class="{vermelho: aplicarCor}">
+
+        Cliente:
+        <h4>Newland</h4>
+        <h4>Compal</h4>
+    </div>
+
 </body>
+<script src="./js/estilo.js"></script>
+
 </html>
