--- a/vue/exercicios/componente.html
+++ b/vue/exercicios/componente.html
@@ -7,9 +7,12 @@
     <script src="/js/vue.min.js"></script>
 </head>
 <body class="exercicio">
-
-    <script>
-        // ...
-    </script>
+<div id="app">
+    <saudacao nome="Arlan Marreiro"></saudacao>
+    <saudacao nome="Maria Katiane"></saudacao>
+    <saudacao nome="Apollo Henrique"></saudacao>
+</div>
+    
 </body>
+<script src="./js/componente.js"></script>
 </html>
