--- a/vue/exercicios/componente2.html
+++ b/vue/exercicios/componente2.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="UTF-8">
-    <title>Template</title>
+    <title>Componente</title>
     <link rel="stylesheet" href="/css/estilo.css">
     <script src="/js/vue.min.js"></script>
 </head>
-
 <body class="exercicio">
-    <div id="app">
-        <saudacao nome="Arlan Marreiro"></saudacao>
-    </div>
-
+<div id="app">
+    <contador></contador>
+    <contador></contador>
+    <contador></contador>
+</div>
+    
 </body>
-<script src="./js/template.js"></script>
-
+<script src="./js/componente2.js"></script>
 </html>
