Directivas Finishing practices Vue.js

--- a/vue/exercicios/diretiva.html
+++ b/vue/exercicios/diretiva.html
@@ -7,9 +7,12 @@
     <script src="/js/vue.min.js"></script>
 </head>
 <body class="exercicio">
+    <div id="app">
+        <input type="text" v-model="nome">
+        <div v-inverter="nome"></div>
+    </div>
 
-    <script>
-        // ...
-    </script>
+    
 </body>
+<script src="./js/diretiva.js"></script>
 </html>
