--- a/vue/qrcode/index.html
+++ b/vue/qrcode/index.html
@@ -10,10 +10,16 @@
 </head>
 
 <body>
-
-    <script>
-        // ...
-    </script>
+    <div id="app">
+        <h1>{{title}}</h1>
+        <div>
+            <input type="text" size="25" placeholder="Digite para Gerar..." v-model="text">
+        </div>
+        <div v-if="text" class="output">
+            <img :src="newQRCode" alt="QRCode">
+        </div>
+    </div>
 </body>
+<script src="./js/qr.js"></script>
 
 </html>
