--- a/vue/sales/index.html
+++ b/vue/sales/index.html
@@ -4,15 +4,38 @@
 <head>
     <meta charset="UTF-8">
     <script src="js/vue.min.js"></script>
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <title>Relatório de Vendas</title>
 </head>
 
 <body>
-
-    <script>
-        // ...
-    </script>
+    <div id="app">
+        <div class="container">
+            <h1 class="mt-3">{{title}}</h1>
+            <table class="mt-5 table">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Nome</th>
+                        <th>Preço</th>
+                        <th>Qtde</th>
+                        <th>Data</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr v-for="sale in sales">
+                        <td>{{sale.id}}</td>
+                        <td>{{sale.name}}</td>
+                        <td v-money="'R$'">{{sale.price}}</td>
+                        <td>{{sale.qtde}}</td>
+                        <td>{{sale.date}}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </body>
+<script src="./js/sales.js"></script>
 
 </html>
