--- a/css/menu.html
+++ b/css/menu.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/css/menu.css">
-    
+    <link rel="stylesheet" href="./css/menu.css">
+
     <title>Menu</title>
 </head>
+
 <body>
     <header class="cabecalho">
         <div class="logo">
@@ -44,4 +46,5 @@
     <script src="../css/js/menu.js"></script>
 
 </body>
+
 </html>
